<resources>
    <string name="app_name">Alumni APP</string>
    <string-array name="year_array">
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string-array name="branch_array">
        <item>CS</item>
        <item>IT</item>
        <item>ME</item>
        <item>AE</item>
        <item>ECE</item>
        <item>EE</item>
        <item>EIC</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="developed_by"> Developed By Ashish Surana \n ashishsurana.in \n Design Credits : Navneet Sharma</string>
    <string name="github_link">This is Proudly a Open Source Software\nWe would love to hear the suggestions and Pull Request\nGithub : https://github.com/ashishsurana/Alumni</string>
    <string name="url_facebook_page">https://www.facebook.com/aryacollege.in/</string>
    <string name="url_college">https://aryacollege.in/</string>
    <string name="is_logged_in">IS_LOGGED_IN</string>
    <string name="preference_file_key">com.example.ashish.alumni.PREFERENCE_FILE_KEY</string>
    <string name="userid">Userid</string>
    <string name="username">Username</string>
    <string name="useremail">Useremail</string>
    <string name="image_company">Company Image</string>
    <string name="save_data">SAVE CHANGES</string>
    <string name="apply_filter">APPLY</string>
    <string name="ques_1">Why do we need Alumni app?</string>
    <string name="answer1">Our social media including Facebook, Linkedin, Twitter, Whatsapp when
        integrated together are not that capable to connect all the people of same place altogether.
        Thereby we needed a platform where we can again tie up all the people of any institution
        from base to brim. Alumni application is the best solution for this. This application will
        help you to open the door to get the updates about the alumni and get there guidance for
        various causes. </string>
    <string name="ques_2">What we want?</string>
    <string name="answer2">We need to know our alumni, we should know each other. This app is a
        crossroad of Alumni. It invites people to stretch the limits of their social circles and
        enhance their thinking with a diversity of new ideas and perspectives. It provides a
        welcoming space for viewpoints to collide in unexpected ways, and for creative sparks to
        fly. We need a community with these features.</string>
    <string name="ques_3">How can you get benefit?</string>
    <string name="answer3">Alumni is a former student of an institution, who is an ace experience
        holder and well laid. Having the lore of their experience can be the most useful aid anyone
        can have. Interacting with them can give us an image about the present scenario and can
        help us to grow with the requirements of the ongoing world. This can help us providing a
        good opportunity using the alumni’s reference or having known their proficiency.</string>
    <string name="ques_4">Question 3</string>
    <string name="answer4">This is the answer to 3 FAQ</string>
    <string name="members">Members</string>
    <string name="events">Events</string>
    <string name="about">About</string>
    <string name="my_profile">My Profile</string>
    <string name="facebook">Facebook Page</string>
    <string name="post_a_job">Post a Job</string>
    <string name="about_app">About Arya Alumni App</string>
    <string name="about_college">About College</string>
    <string name="support_us">Support Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">FAQs</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="log_out_prompt">You are successfully logged Out</string>
    <string name="app_share_text">https://play.google.com/store/apps/details?id=in.surana.ashish.alucon \n Get the alumni app and be a part of awesome community</string>
    <string name="forget_password">Forgot Password</string>
    <string name="forget_password_prompt">Next step will give you a new password on given email id</string>
    <string name="isNerdCheckBox_text">I am doing Higher studies</string>
    <string name="designation">Designation</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_password">Make it a bit stronger</string>
    <string name="error_name">Please provide full name</string>
    <string name="error_">Make it a bit stronger</string>
    <string name="event_1">Tehnika Naitus</string>
    <string name="event_1_url">http://www.aryacollege.in/tehnika-naitus.php</string>
    <string name="event_1_image_url">http://139.59.13.112:8000/event/1.jpg</string>
    <string name="event_2">Shraddhanjali</string>
    <string name="event_2_url">http://www.aryacollege.in/shradhanjali.php</string>
    <string name="event_2_image_url">http://139.59.13.112:8000/event/2.jpg</string>
    <string name="event_3">Graduation Day</string>
    <string name="event_3_url">http://www.aryacollege.in/graduation-day.php</string>
    <string name="event_3_image_url">http://139.59.13.112:8000/event/3.jpg</string>
    <string name="event_4">Zephyr</string>
    <string name="event_4_url">http://www.aryacollege.in/zephyr.php</string>
    <string name="event_4_image_url">http://139.59.13.112:8000/event/4.jpg</string>
    <string name="event_5">Victory</string>
    <string name="event_5_url">http://www.aryacollege.in/the-annualday.php</string>
    <string name="event_5_image_url">http://139.59.13.112:8000/event/5.png</string>
    <string name="event_6">Engineer Day</string>
    <string name="event_6_url">http://www.aryacollege.in/engineer-day.php</string>
    <string name="event_6_image_url">http://139.59.13.112:8000/event/6.jpg</string>
    <string name="event_7">Auto Ignition</string>
    <string name="event_7_url">http://www.aryacollege.in/autoignition.php</string>
    <string name="event_7_image_url">http://139.59.13.112:8000/event/7.jpg</string>
    <string name="event_8">TopGuns</string>
    <string name="event_8_url">http://www.aryacollege.in/the-farewellparty.php</string>
    <string name="event_8_image_url">http://139.59.13.112:8000/event/8.png</string>
    <string name="event_9">Exergie</string>
    <string name="event_9_url">http://www.aryacollege.in/exergie.php</string>
    <string name="event_9_image_url">http://139.59.13.112:8000/event/9.jpg</string>
    <string name="topview">TopView</string>
    <string name="logo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="join_us">Join Us</string>
    <string name="registration">REGISTRATION</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="feeds">Feeds</string>
    <string name="jobs">Jobs</string>
    <string name="third_item">Third item</string>
    <string name="connect_people">Connect People</string>
    <string name="notificationModel">Notification</string>
    <string name="connect_fragment">Connect Fragment</string>
    <string name="event_fragment">Event Fragment</string>
    <string name="feeds_fragment">Feeds Fragment</string>
    <string name="jobs_fragment">Jobs Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="user_name_v23">USER NAME v23</string>
    <string name="user_name">USER NAME</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="feedback_fragment">Feedback Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="register_success_popup">Registered successfully.\nVerification email has been sent.\nPlease verify email.</string>
    <string name="passwerror">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number and one special character</string>
    <string name="nameerror">Enter Valid Name. Name should contain at least 3 characters</string>
    <string name="confpasswerror">Password do not match</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="tap_next_to_verify_your_account_with_your_phone_number_you_don_t_need_to_manualy_enter_verification_code_if_the_number_install_in_this_phone">Tap Next to verify your account with your phone number. You don\'t need to manualy enter verification code if the number install in this phone...</string>
    <string name="next">Next</string>
    <string name="enter_the_code_that_was_send_to">Enter the code that was send to</string>
    <string name="_918372890302">+918372890302</string>
    <string name="cont">Continue</string>
    <string name="i_didn_t_get_a_code">I didn\'t get a code</string>
    <string name="tap_continue_to_accept_our_terms_data_policy_cookie_use_and_the_privacy_policy_and_terms_of_service">Tap Continue to accept our Terms,Data Policy, cookie use and the Privacy Policy and Terms of Service...</string>
    <string name="congratulation_your_number_is_verified_click_continue_to_create_your_profile">Congratulation your number is verified click Continue to create your profile</string>
    <string name="add_event">ADD EVENT</string>
    <string name="no_posts_create_your_own_now">No posts? create your own now.</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="add_feed">ADD FEED</string>
    <string name="exp">Select Experience</string>
    <string name="no_users">No Users</string>
    <string name="select_state">Select a State</string>
    <string name="select_city">Select a City</string>
    <string name="select_batch">Select a Batch</string>
    <string name="select_navodhya">Select Navodhya School</string>
    <string name="users">Users</string>
    <string name="no_notifications">No Notifications</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_enough_permission">No enough permissions(CAMERA, RECORD_AUDIO, WRITE_EXTERNAL_STORAGE)</string>
    <string name="recording">Recording</string>
    <string name="record">Record</string>
    <string name="shot">Shot</string>
    <string name="cancel">Cancel</string>
    <string name="image_mode">Image Mode</string>
    <string name="video_mode">Video Mode</string>
    <string name="finish">Finish</string>
    <string name="flip">Flip</string>
    <string name="play_file">Play[%s]</string>
    <string name="done">Done</string>
    <string name="fill">Fill</string>
</resources>