<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_news"
        android:icon="@drawable/news_feed"
        android:title="@string/feeds" />
    <item
        android:id="@+id/bottom_jobs"
        android:icon="@drawable/job_ic"
        android:title="@string/jobs" />
    <item
        android:id="@+id/bottom_connect"
        android:icon="@drawable/connnect_ic"
        android:title="@string/connect_people" />
    <item
        android:id="@+id/bottom_event"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />
    <item
        android:id="@+id/bottom_notification"
        android:icon="@drawable/notification_ic"
        android:title="@string/notification" />
</menu>