<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <ImageView
        android:id="@+id/top_curve"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="-50dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginRight="-50dp"
        android:contentDescription="@string/topview"
        android:src="@drawable/top_shape"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/logo"
                android:textColor="@color/grey"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab_bg"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <LinearLayout
                        android:id="@+id/linearLayout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tab_bg"
                        android:padding="6dp">

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="3dp"
                            app:iiv_color="@color/card_background"
                            app:iiv_icon="faw-envelope" />

                        <EditText
                            android:id="@+id/editText_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="8dp"
                            android:text=""
                            android:textColor="@android:color/holo_red_light"
                            android:textColorHint="@color/white_hint"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/tab_bg"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="3dp"
                            app:iiv_color="@color/card_background"
                            app:iiv_icon="faw-lock" />

                        <EditText
                            android:id="@+id/editText_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:text=""
                            android:textColor="@android:color/holo_red_light"
                            android:textColorHint="@color/white_hint"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/login_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/green"
                        app:cardCornerRadius="14dp"
                        app:cardElevation="4dp">

                        <Button
                            android:id="@+id/button_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/solid_red_background"
                            android:onClick="loginButton"
                            android:padding="8dp"
                            android:text="@string/log_in"
                            android:textColor="#fff"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/new_user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView_forgetpasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:padding="8dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/card_background"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/new_user"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="register"
                    android:padding="2dp"
                    android:text="@string/join_us"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>